--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "detector-front",
+  "homepage": "https://amis-poc.xray/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
