[FIX] react 18 버전 createRoot 적용

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "detector-front",
+  "name": "xray-front",
   "homepage": "https://amis-poc.xray/",
   "version": "0.1.0",
   "private": true,
